# PocketFlow-Rust

./: .gitignore  AGENTS.md  CONFIG_GUIDE.md  Cargo.toml  README.md  xxx.md
docs/: design.md
examples/: basic.rs
examples/pi/: Cargo.toml
examples/pi/src/: lib.rs  main.rs  state.rs
examples/pi/src/nodes/: check_size.rs  do_compact.rs  input.rs  llm_reasoning.rs  mod.rs  tool_execution.rs
examples/pi/src/utils/: config.rs  mod.rs  pi_llm.rs  session_manager.rs
examples/pi/src/utils/tools/: mod.rs
examples/pocketflow-rs-rag/: Cargo.toml
examples/pocketflow-rs-rag/src/: state.rs
examples/text2sql/src/: flow.rs
src/: flow.rs  node.rs
src/utils/: config.rs  mod.rs  pi_llm.rs  session_manager.rs
src/utils/tools/: mod.rs
