[package]
name = "pocketflow_rs"
version = "0.1.0"
edition = "2024"
description = "PocketFlow implemented by rust"
authors = ["Yan Lu <luyanfcp@gmail.com>"]
license = "MIT"

[lib]
name = "pocketflow_rs"
path = "src/lib.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"

[workspace]
members = ["examples/pocketflow-rs-rag", "examples/text2sql"]

[workspace.dependencies]
strum = "0.26"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
rand = "0.8"
openai_api_rust = { version = "0.1.9", optional = true }
regex = "1.11.1"
strum = { version = "0.26", features = ["derive"] }
qdrant-client = { version = "1.14.0", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }

[features]
openai = ["dep:openai_api_rust"]
websearch = ["dep:reqwest"]
qdrant = ["dep:qdrant-client"]
debug = []
default = ["openai"]
