[package]
name = "pi"
version = "0.1.0"
edition = "2024"

[dependencies]
pocketflow_rs = { path = "../../", features = ["openai"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
uuid = { version = "1.8", features = ["v4", "fast-rng"] }
strum = { version = "0.26", features = ["derive"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
toml = "0.8"
tracing = "0.1"
